# embassy-npcx

./: Cargo.toml  README.md  build.rs  deny.toml  link_flash.x  rust-toolchain.toml
.github/workflows/: check.yml
examples/: Cargo.toml  README.md  memory.x  npcx490m-chip.yaml  rust-toolchain.toml
examples/.cargo/: config.toml
src/: cancellation.rs  cdcg.rs  espi.rs  gpio.rs  gpio_miwu.rs  i2c.rs  keyboard.rs  lib.rs  miwu.rs  spip.rs  time_driver.rs  uart.rs
src/timer/: low_level.rs  mod.rs
