[package]
name = "embassy-npcx"
version = "0.1.0"
authors = [ "David Venhoek <david@tweedegolf.com>" ]
edition = "2021"
license = "MIT"
description = "Embassy HAL for Nuvoton NPCX MCU family"
readme = "README.md"
keywords = [ "embedded", "async", "npcx490m", "nuvoton", "embedded-hal" ]
categories = [ "embedded", "hardware-support", "no-std", "asynchronous" ]
repository = "https://github.com/OpenDevicePartnership/embassy-npcx"
rust-version = "1.85.0"

[features]
default = ["rt"]
defmt = ["dep:defmt"]
rt = ["npcx490m-pac/rt", "dep:cortex-m-rt", "cortex-m-rt/set-vtor", "cortex-m-rt/set-sp"]

## Enables additional driver features that depend on embassy-time
time = ["dep:embassy-time"]

# Features starting with `_` are for internal use only. They're not intended
# to be enabled by other crates, and are not covered by semver guarantees.
_time-driver = ["dep:embassy-time-driver", "time", "dep:embassy-time-queue-utils"]

time-driver-mft16-1 = ["_time-driver"]
time-driver-mft16-2 = ["_time-driver"]
time-driver-mft16-3 = ["_time-driver"]

[dependencies]
npcx490m-pac = { git = "https://github.com/OpenDevicePartnership/npcx490m-pac", features = ["critical-section"] }
embedded-hal-i2c = { git = "https://github.com/tweedegolf/embedded-hal-i2c.git", branch = "main" }
embassy-hal-internal = { git = "https://github.com/embassy-rs/embassy", features = ["cortex-m", "prio-bits-4"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", optional = true }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", optional = true }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy", optional = true }

cortex-m-rt = { version = ">=0.6.15,<0.8", optional = true }
cortex-m = "0.7.7"

critical-section = "1.1"
defmt = { version = "1.0", optional = true }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6"
paste = "1.0"
cfg-if = "1.0"
maitake-sync = { version = "0.2.0", default-features = false, features = ["critical-section"] }
