[package]
name = "npcx490m-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-npcx = { path = "../", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt"] }
embassy-sync = "0.6.2"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

embedded-hal = "1.0"
embedded-hal-async = "1.0"

[profile.release]
debug = 2