[package]
name = "npcx490m-examples"
version = "0.1.0"
edition = "2021"

[features]
_time = ["dep:embassy-time", "embassy-npcx/time-driver-mft16-3"]
time_lfclk = ["_time", "embassy-time/tick-hz-32_768"]
time_apb1 = ["_time", "embassy-time/tick-hz-1_048_576"]

default = ["time_lfclk"]

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.5"
defmt = "1.0"
defmt-rtt = "1.0"
embassy-npcx = { path = "../", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime-us"], optional = true }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", default-features = false }
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io-async = "0.6"
embedded-hal-i2c = { git = "https://github.com/tweedegolf/embedded-hal-i2c.git", branch = "main" }

[profile.release]
debug = 2
